force-app/main/default/objects/clofor_com_cfs__Plan__c/fields/clofor_com_cfs__Active__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>