force-app/main/default/objects/clofor_com_cfs__Plan__c/fields/clofor_com_cfs__BuyingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyingUnitPriceLocal__c</fullName>
    <label>Buying Unit Price(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>