force-app/main/default/objects/clofor_com_cfs__Plan__c/fields/clofor_com_cfs__ContractPeriodMonth__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContractPeriodMonth__c</fullName>
    <label>Contract Period Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>