force-app/main/default/objects/clofor_com_cfs__Plan__c/fields/clofor_com_cfs__ParentPlan__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParentPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Plan</label>
    <referenceTo>clofor_com_cfs__Plan__c</referenceTo>
    <relationshipLabel>CHILD PLAN</relationshipLabel>
    <relationshipName>ParentPlan</relationshipName>
    <type>Lookup</type>
</CustomField>