force-app/main/default/objects/clofor_com_cfs__Plan__c/fields/clofor_com_cfs__PlanDetail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlanDetail__c</fullName>
    <label>Plan Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>