force-app/main/default/objects/clofor_com_cfs__Plan__c/fields/clofor_com_cfs__PlanNickName1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlanNickName1__c</fullName>
    <label>PlanNick Name-1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>