force-app/main/default/objects/clofor_com_cfs__Plan__c/fields/clofor_com_cfs__PlanNickName2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlanNickName2__c</fullName>
    <label>Plan Nick Name-2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>