force-app/main/default/objects/clofor_com_cfs__Plan__c/fields/clofor_com_cfs__SellingUnitPriceFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellingUnitPriceFCY__c</fullName>
    <label>Selling Unit Price(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>