force-app/main/default/objects/clofor_com_cfs__Plan__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__PlanName__c</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>